# dingding-service

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/dingding_service/: __init__.py
src/dingding_service/spreadsheet/: __init__.py  client.py  config.py  errors.py  main.py  models.py  routes.py
tests/: conftest.py  spreadsheet_api_verified.py  test_client.py  test_fastapi_integration.py  test_health.py  test_sheets.py  test_spreadsheet_api.py  test_spreadsheet_final.py  test_spreadsheet_v2.py
