[project]
name = "dingding-service"
version = "0.1.0"
description = "钉钉在线表格 REST API 服务"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "bill" }
]
keywords = ["dingtalk", "spreadsheet", "dingding", "rest-api"]

dependencies = [
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic-settings>=2.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=1.4.0",
]

[project.scripts]
dingding-spreadsheet = "dingding_service.spreadsheet.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dingding_service"]

[project.optional-dependencies]
dev = ["ruff>=0.11.0", "mypy>=1.15.0", "pre-commit>=4.0.0"]

# ===== Ruff (linter + formatter) =====
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ===== mypy =====
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

# ===== pytest =====
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
